# feedforward

./: .gitignore  Edit.hs  Main.hs  README.md  Server.hs  TidalHint.hs  feedforward.cabal  package.yaml  stack.yaml
Drum/: Client.hs  Client.hs~  Server.hs  Server.hs~
Feedforward/: Change.hs  Edit.hs  TidalHint.hs
logs/: 20180209T210827-8462.txt  20180209T211124-9304.txt  20180209T223526-11098.txt  20180209T223544-11131.txt  20180209T232700-13049.txt  20180209T235309-14266.txt  20180210T003458-15608.txt  20180211T000142-18900.txt  20180211T000806-19263.txt  20180211T000927-19357.txt  20180211T092717-4596.txt  20180211T094123-5222.txt  20180211T102810-5952.txt  20180211T103017-6025.txt  20180211T103036-6072.txt  20180211T103054-6091.txt  20180211T103117-6116.txt  20180211T103243-6174.txt  20180211T103408-6226.txt  20180211T103822-6385.txt  20180211T105645-7053.txt  20180211T105836-7112.txt  20180211T110345-7276.txt  20180211T200028-18653.txt  20180211T200058-18653.txt  20180211T200233-18750.txt  20180211T200433-18858.txt  20180211T200937-19162.txt  20180211T201149-19294.txt  20180211T201214-19333.txt  20180211T201447-19476.txt  20180211T215300-22806.txt  20180211T220000-23166.txt  20180211T220157-23217.txt  20180211T220259-23266.txt  20180211T221508-23709.txt  20180211T222822-24238.txt  20180211T222920-24511.txt  20180212T130240-32567.txt  20180212T130748-4286.txt  (+198 more)
logs/2019/12/23/: 172319-2644.txt
logs/sessions/: session-1-1-drum1.json~
src/: Change.hs  Client.hs  Code.hs  Edit.hs  Main.hs  Parameters.hs  Server.hs  TidalHint.hs
