name:           feedforward
version:        0.0.1
copyright:      2018 Alex McLean and contributors
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , directory
    , filepath
    , hint
    , hosc
    , mtl
    , ncurses
    , network
    , text
    , tidal
    , time
    , unix
    , websockets
  exposed-modules:
      Change
      -- Client
      Edit
      Main
      -- Server
      TidalHint
  other-modules:
      Paths_feedforward
  default-language: Haskell2010

executable feedforward
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -dynamic
  build-depends:
      aeson
    , base
    , directory
    , filepath
    , hint
    , hosc
    , mtl
    , ncurses
    , network
    , text
    , tidal
    , time
    , unix
    , websockets
  other-modules:
      Change
      -- Client
      Edit
      -- Server
      TidalHint
      Paths_feedforward
  default-language: Haskell2010
