name:           feedforward
version:        0.0.1
copyright:      2018 Alex McLean and contributors
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , directory
    , filepath
    , hint
    , hosc
    , mtl
    , ncurses
    , network
    , optparse-applicative
    , text
    , tidal >= 1.4.6
    , time
    , unix
    , websockets
    , transformers
  exposed-modules:
      Change
      -- Client
      Edit
      Main
      -- Server
      TidalHint
  other-modules:
      Paths_feedforward
  default-language: Haskell2010

executable feedforward
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded
  build-depends:
      aeson
    , base
    , directory
    , filepath
    , hint
    , hosc
    , mtl
    , ncurses
    , network
    , optparse-applicative
    , text
    , tidal
    , time
    , unix
    , websockets
    , transformers 
  other-modules:
      Change
      -- Client
      Edit
      -- Server
      TidalHint
      Paths_feedforward
  default-language: Haskell2010
  -- ld-options: -Wl,-rpath -Wl,$ORIGIN/libs
